--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Saikiran</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script>
-        window.location.href = "./Welcome/welcome.html"; 
+        window.location.href = "./components/html/welcome.html"; 
     </script>
 </head>
 <body>
