--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="manifest" href="./favicon.JPG">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon.JPG">
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon.JPG">
+    <link rel="manifest" href="./favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon.JPG">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Saikiran</title>
